# segment_pc

./: .gitignore  CMakeLists.txt  package.xml
config/: pcl_launch_params.yaml
launch/: segment_pcl.launch
msg/: obj_centroid_data.msg  obj_pointcloud.msg
src/: CMakeLists.txt  mocap_transform.py  obj_list.py  otsu_threshold_test.py  pointcloud_center.py  segment_pcl_node.py  segment_pcl_node2.py
src/msg/: obj_centroid_data.msg  obj_centroid_list.msg  obj_pointcloud.msg
src/src/: obj_list.py  pointcloud_center.py  segment_pcl_node.py
